stock batches updated